[gd_scene load_steps=5 format=3 uid="uid://b81eaak3yqk6c"]

[ext_resource type="Script" path="res://Source/UI/MainMenu.gd" id="1_1saim"]
[ext_resource type="Texture2D" uid="uid://cm5xn4hrrx1yl" path="res://Source/UI/Menu_BG.jpg" id="2_u2ec1"]
[ext_resource type="Texture2D" uid="uid://becx3bt70wovx" path="res://Source/UI/Buttons_BG.png" id="3_tblvq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj5w8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1saim")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u2ec1")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -144.5
offset_right = 70.5
offset_bottom = 144.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yj5w8")

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_tblvq")
region_rect = Rect2(33, 33, 234, 234)
patch_margin_left = 55
patch_margin_top = 53
patch_margin_right = 57
patch_margin_bottom = 56

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Audio" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Video" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Input" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Input"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Input" to="." method="_on_input_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
